# atari-jepa

./: .gitignore  LICENSE  README.md  TRAINING.md  V1_RESULTS.md  pyproject.toml
agents/: autoencoder.py  encoder.py  jepa.py  ppo_atari.py
configs/: autoencoder.yaml  jepa.yaml  phase3.yaml  v0.yaml  v1.yaml
env/: perturbations.py  wrappers.py
results/v0/: perturbation_results.txt
results/v0/phase3/: phase3_results.json  phase3_results.txt
results/v0/phase4/: REPORT.md
results/v1/: v1_results.json  v1_results.txt
scripts/: collect_frames.py  generate_report.py  plot_learning_curves.py  plot_learning_curves_v1.py  plot_robustness.py  plot_v1.py  run_all.sh  run_phase3.py  run_v1.py  test_env.py  train_autoencoder.py  train_baseline.py  train_jepa.py  train_with_encoder.py  verify_encoders.py  visualize_saliency.py
scripts/utils/: eval_baseline.py  generate_comparison_gifs.py  measure_gap.py
